fix userconfig bug